--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.63.6",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "yaml-loader": "^0.8.0"
   }
 }
