--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "sass": "^1.63.6",
+        "styled-components": "^6.0.2",
         "swr": "^2.2.0",
         "typescript": "5.1.6"
     },
